fixed margin in footer to top align

--- a/less/style.less
+++ b/less/style.less
@@ -679,6 +679,7 @@ body {
 	
 	&.footer2 {
 		margin-right: 0;
+		margin-top: 13px;
 		
 		.content-left {
 			float: left;
@@ -698,6 +699,7 @@ body {
 	}
 	
 	&.footer3 {
+		margin-top: 13px;
 		
 		.email-wrapper {
 			p {
